# MAN-simulator

./: CMakeLists.txt  README.md
player/: Player.h
player/physics/: Action.h
server/: Server.cpp  Server.h
server/gui/: Menu.cpp  Menu.h  Settings.cpp  Settings.h
server/gui/scene/: AddPlayerDialog.cpp  AddPlayerDialog.h  Field.cpp  Field.h  GameField.cpp  GameField.h  PlayerDialog.cpp  PlayerDialog.h
server/objects/: Ball.h
